classDiagram
direction LR

class Owner {
  +owner_name: str
  +available_minutes_per_day: int
  +preferred_task_order: list~str~
  +medication_reminder_enabled: bool
  +pets: list~Pet~
  +add_pet(pet)
  +remove_pet(pet_name)
  +update_preferences(preferences)
  +set_daily_availability(minutes)
  +get_profile_summary() str
  +get_all_tasks(include_completed) list~Task~
  +get_all_due_tasks(target_date) list~Task~
}

class Pet {
  +pet_name: str
  +species: str
  +age: int
  +energy_level: str
  +special_needs: str
  +tasks: list~Task~
  +update_pet_info(info)
  +get_care_needs() str
  +get_pet_summary() str
  +add_task(task)
  +remove_task(description)
  +list_tasks(include_completed) list~Task~
  +mark_task_completed(description) bool
  +get_due_tasks(target_date) list~Task~
}

class Task {
  +description: str
  +due_at: datetime
  +frequency: str
  +completed: bool
  +priority: int
  +duration_minutes: int
  +category: str
  +notes: str
  +pet_name: str
  +edit_task(details)
  +is_due_today(target_date) bool
  +mark_completed()
  +mark_complete()
  +estimate_urgency_score() float
  +next_occurrence() Task
}

class Scheduler {
  +owner: Owner
  +pets: list~Pet~
  +task_list: list~Task~
  +refresh_task_cache() list~Task~
  +get_tasks_for_date(target_date) list~Task~
  +sort_by_time(tasks) list~Task~
  +filter_tasks(pet_name, completed, target_date) list~Task~
  +detect_conflicts(tasks) list~str~
  +rank_tasks(tasks) list~Task~
  +build_daily_plan(target_date) list~Task~
  +resolve_conflicts(tasks) list~Task~
  +explain_selection_logic() str
}

Owner "1" --> "0..*" Pet : owns
Pet "1" --> "0..*" Task : has care tasks
Scheduler --> Owner : uses preferences
Scheduler --> Pet : aggregates tasks
Scheduler --> Task : sorts/filters/schedules
